config file edit

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,9 @@
 
         {% if site.show_downloads %}
         <ul class="downloads">
-          <li><a target="_blank" href="{{ site.food.downloads.resume }}">Download <strong>PDF File</strong></a></li>
+          <li><a target="_blank" href="{{ site.downloads.resume }}">Download <strong>PDF File</strong></a></li>
           <li><a>NO/OP <strong>noop</strong></a></li>
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+          <li><a href="{{ site.website.owner_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
       </header>
