--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,28 @@
     <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
+    <style>
+      .strava-badge- { display: inline-block; height: 48px; }
+      .strava-badge- img { visibility: hidden; height: 48px; }
+      .strava-badge-:hover { background-position: 0 -63px; }
+      .strava-badge-follow { height: 48px; width: 48px; background: url(http://badges.strava.com/echelon-sprite-48.png) no-repeat 0 0; }
+      .my-logos {
+        width: 99%;
+        display: inline-flex;
+        text-align: center;
+      }
+      .my-logos .quora-icon {
+        width: 33%;
+        margin: 5px;
+        cursor: pointer;
+        margin-top: 12px;
+      }
+      .my-logos .strava-icon {
+        width: 33%;
+        margin: 5px;
+        cursor: pointer;
+      }
+    </style>
   </head>
   <body>
     <div class="wrapper">
@@ -33,6 +55,21 @@
           <li><a href="{{ site.website.owner_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
+
+        {% if site.mydetails.show_quora %}
+          <div class="quora-icon">
+            <a href="https://www.quora.com/profile/Dixit-Patel-4" target="_blank">
+              <img src="http://qsf.fs.quoracdn.net/-3-images.logo.wordmark_default.svg-26-32753849bf197b54.svg"></div>
+            </a>
+          </div>
+        {% endif %}
+
+        {% if site.mydetails.show_strava %}
+          <div class="strava-icon">
+            <a href="http://strava.com/athletes/19109068/badge" class="strava-badge- strava-badge-follow" target="_blank"><img src="http://badges.strava.com/echelon-sprite-48.png" alt="Strava" /></a>
+          </div>
+        {% endif %}
+
       </header>
       <section>
 
