missing react right now

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
         width: 33%;
         margin: 5px;
         cursor: pointer;
-        margin-top: 12px;
+        margin-top: 17px;
       }
       .my-logos .strava-icon {
         width: 33%;
@@ -59,8 +59,8 @@
           <div class="my-logos">
             {% if site.mydetails.show_quora %}
               <div class="quora-icon">
-                <a href="http://strava.com/athletes/19109068/badge" target="_blank">
-                  <img src="http://qsf.fs.quoracdn.net/-3-images.logo.wordmark_default.svg-26-32753849bf197b54.svg"></div>
+                <a href="https://www.quora.com/profile/Dixit-Patel-4" target="_blank">
+                  <img src="http://qsf.fs.quoracdn.net/-3-images.logo.wordmark_default.svg-26-32753849bf197b54.svg" alt="quora" />
                 </a>
               </div>
             {% endif %}
